--- a/_config.yml
+++ b/_config.yml
@@ -23,7 +23,8 @@ email: michael dot g dot burke at monash dot edu
 description: >- # this means to ignore newlines until "baseurl:"
   Michael Burke's personal research page.
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "michaelburke.co.za" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://mgb45.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+baseurl: ""
 github_username:  mgb45
 
 # Build settings
